--- a/commons-email-1.3.2-src/.github/workflows/maven.yml
+++ b/commons-email-1.3.2-src/.github/workflows/maven.yml
@@ -27,7 +27,20 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
         cache: maven
-   
-    - name: Test with Maven
-      run: mvn clean test
+    - name: Build with Maven
+      run: mvn --batch-mode --update-snapshots package
+
+ 
+  test:
+    runs-on: windows-latest
     
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up JDK 11
+      uses: actions/setup-java@v3
+      with:
+        java-version: '11'
+        distribution: 'temurin'
+        cache: maven
+    - name: test with maven
+      run: mvn clean test
